# STM32Lessons

./: .gitignore  README.md
PikabuLes1/: .mxproject  .project  CMakeLists.txt  Makefile  PikabuLes1 Run.cfg  PikabuLes1.ioc  PikabuLes1.xml  cmake_install.cmake  mx.scratch
PikabuLes1/Inc/: FreeRTOSConfig.h  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
PikabuLes1/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_hal_timebase_TIM.c  stm32f1xx_it.c
PikabuLes2/: .mxproject  .project  CMakeLists.txt  PikabuLes2 Run.cfg  PikabuLes2.ioc  README.md  mx.scratch
PikabuLes2/Inc/: main.h  stm32f3xx_it.h
PikabuLes2/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_TIM.c  stm32f3xx_it.c
